clang/test/BSC/Negative/Ownership/RuleCheck/bad-cfg/bad-cfg.cbs
// RUN: %clang_cc1 -verify %s

// bad cfg
void test1(int* owned p, int x) { 
L1:
    x = x + 1;
    if (x < 10) goto L1;  // expected-error {{Invalid code structure. Jumping back to previous labels is not allowed.}}
    void* temp = (void*)(void* owned)p;
}

// good cfg
void test2(int* owned p, int x) {

    if (x > 100) goto L1;

    for (int i=0; i<10; i++) {
        x = x + i;
    }

L1:
    void* temp = (void*)(void* owned)p;
}
